# orchard2

./: .dockerignore  .gitignore  .gitmodules  Caddyfile  Dockerfile  Procfile  Procfile.example  Procfile.prod  README.md  TODO.txt  django-bridge-react-0.3.2.tgz  django-bridge-react-0.4.0.tgz  dump.rdb  start.sh
rhythm-cafe/: pyproject.toml
rhythm-cafe/libs/bunny_storage/: README.md  pyproject.toml
rhythm-cafe/libs/essfree/: README.md  pyproject.toml
rhythm-cafe/libs/rdlevel_parse/: README.md  pyproject.toml
rhythm-cafe/libs/utils/: pyproject.toml
rhythm-cafe/libs/vitals/: README.md  pyproject.toml
rhythm-cafe/libs/vitals/tests/: test_color_tagged_string.py  test_snapshots.py
rhythm-cafe/orchard/: .env.example
rhythm-cafe/orchard/cafe/: admin.py  models.py  urls.py  views.py
rhythm-cafe/orchard/cafe/jinja2/: blocks.txt  environment.py
rhythm-cafe/orchard/cafe/libs/: discord_oauth.py  errors.py  gen_id.py
rhythm-cafe/orchard/cafe/middleware/: hoist_css_middleware.py
rhythm-cafe/orchard/cafe/migrations/: 0003_alter_user_email.py  0005_remove_user_display_name.py  0008_delete_publisher.py  0009_club_clubmembership_club_members_clubrdlevel_and_more.py  0010_alter_clubmembership_role.py  0011_clubinvite.py  0012_discordguild.py
rhythm-cafe/orchard/cafe/models/: __init__.py  club.py  discord_guild.py  publisher.py  rdlevel.py  user.py  utils.py
rhythm-cafe/orchard/cafe/templates/: environment.py  index.jinja
rhythm-cafe/orchard/cafe/views/: __init__.py  index.py
rhythm-cafe/orchard/orchard/: settings.py  urls.py  wsgi.py
rhythm-cafe/src/: .env.example
rhythm-cafe/src/cafe/: admin.py  apps.py  db_signals.py  urls.py
rhythm-cafe/src/cafe/jinja2/: blocks.txt  environment.py
rhythm-cafe/src/cafe/libs/: bad_words.py  discord_oauth.py  gen_id.py
rhythm-cafe/src/cafe/middleware/: __init__.py  hoist_css_middleware.py  minify_middleware.py
rhythm-cafe/src/cafe/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_delete_clubrdlevel.py  0003_alter_rdlevelprefillresult_club_and_more.py  0004_alter_user_email.py  0006_alter_user_options_alter_user_first_name_and_more.py  0007_userprofile.py  0013_rdlevelprefillresult.py  0014_rdlevelprefillresult_club_rdlevelprefillresult_user.py  0015_rdlevelprefillresult_errors.py  0016_rdlevelprefillresult_version_and_more.py  0017_rdlevelprefillresult_url.py  0018_rdlevel_artist_rdlevel_artist_tokens_rdlevel_authors_and_more.py  0019_rdlevel_rdzip_url.py  0020_alter_rdlevelprefillresult_data.py  0021_alter_rdlevelprefillresult_data.py  0022_alter_rdlevel_icon_url.py  0023_rdlevel_submitter.py  0024_alter_rdlevel_sha1.py  0025_rdlevelprefillresult_created_at.py  0026_alter_rdlevelprefillresult_created_at.py  0027_remove_user_cafe__user__username_startswith_u_.py  0028_user_cafe__user__username_startswith_u_.py
rhythm-cafe/src/cafe/models/: __init__.py  club.py  discord_guild.py  predicates.py  rdlevel.py  rdlevel_prefill.py  user.py  user_profile.py  utils.py
rhythm-cafe/src/cafe/views/: __init__.py  index.py
rhythm-cafe/src/orchard/: asgi.py  settings.py  urls.py
server/cafe-backend/: .env.example  manage.py  pyproject.toml
server/cafe-backend/cafe/: admin.py  apps.py  signing.py  social_adapter.py  urls.py  webhooks.py
server/cafe-backend/cafe/bridge/: __init__.py  metadata.py  middleware.py  response.py
server/cafe-backend/cafe/contexts/: csrf_token.py  flags.py  reverse.py  user.py
server/cafe-backend/cafe/middleware/: __init__.py  api_key.py
server/cafe-backend/cafe/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_id_alter_user_username.py  0003_alter_user_managers.py  0004_alter_user_options_user_cafe__user_id_starts_with_u.py  0005_remove_user_date_joined_remove_user_first_name_and_more.py  0006_user_date_joined_user_first_name_user_groups_and_more.py  0007_user_theme_preference.py  0008_alter_user_theme_preference.py  0009_club.py  0010_clubmembership.py  0011_club_members.py  0012_clubinvite.py  0013_discordguild.py  0014_discordguild_name.py  0015_remove_discordguild_name.py  0016_rdlevelprefillresult.py  0017_rdlevelprefillresult_task_id.py  0018_remove_rdlevelprefillresult_task_id.py  0019_rdlevel.py  0020_rdlevel_approval.py  0021_alter_club_id_alter_rdlevel_id_and_more.py  0022_remove_rdlevel_authors_raw.py  0023_historicalclub_historicalrdlevel.py  0024_historicalrdlevel_artist_raw_and_more.py  0025_alter_user_theme_preference.py  0026_alter_club_id_alter_historicalclub_id.py  0027_user_api_key.py  0028_alter_user_api_key.py  0029_replace_api_key_with_iter.py  0030_remove_historicalrdlevel_has_classics_and_more.py  0031_historicalrdlevel_approval_notes_private_and_more.py  0032_dailyblend.py  0033_add_is_private_to_rdlevel.py  0034_historicalrdlevel_prefill_version_and_more.py  0035_alter_historicalrdlevel_prefill_version_and_more.py  0036_auto_20251226_1207.py  0037_historicalrdlevel_has_burnshots_and_more.py  0038_rdlevelprefillresult_go_to_prepost_and_more.py  0039_alter_rdlevelprefillresult_level.py  0040_dailyblend_blended.py  (+24 more)
server/cafe-backend/cafe/models/: __init__.py  add_session.py  banned_guild.py  discord_guild.py  id_utils.py  predicates.py  types.py  user.py
server/cafe-backend/cafe/tasks/: README.md  __init__.py  find_discord_guild_name.py  prefill_version_upgrade.py  report_blend_change.py  run_daily_blend.py  run_prefill.py  sync_level_to_meili.py  sync_level_to_typesense.py  test_sentry.py
server/cafe-backend/cafe/tests/: conftest.py  test_api_keys.py  test_blend_notifications.py  test_club_delete.py  test_clubs_connect_discord.py  test_clubs_redeem_invite.py  test_daily_blend.py  test_discord_bot_add.py  test_discord_bot_entry.py  test_discord_bot_version.py  test_download_rdlevel.py  (+9 more)
server/cafe-backend/orchard/: asgi.py  settings.py  urls.py  wsgi.py
server/essfree/: pyproject.toml
server/vitals/: pyproject.toml
server/vitals/tests/: test_color_tagged_string.py  test_vitals_snapshot.py
src/backend/: README.md  pyproject.toml  pytest.ini
src/backend/tests/: conftest.py
src/backend/tools/: download_vitals_test_fixtures.sh
(+828 files in other folders)
