[tool.poetry]
name = "orchard"
version = "0.1.0"
description = ""
authors = ["auburn <37142182+auburnsummer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pillow = "^9.5.0"
starlette = "^0.28.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
pyseto = "^1.7.2"
httpx = "^0.24.1"
msgspec = "^0.16.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.18"}
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
syrupy = "^4.0.4"
alembic = "^1.11.1"
pytest-asyncio = "^0.21.0"
pytest-randomly = "^3.12.0"
pytest-socket = "^0.6.0"
debugpy = "^1.6.7"
killport = "^1.2.0"
mypy = "^1.4.1"
types-pillow = "^10.0.0.0"
time-machine = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
