[project]
name = "bunny-storage"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "auburn", email = "37142182+auburnsummer@users.noreply.github.com" }
]
dependencies = [
    "tenacity>=8.5.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bunny_storage"]
