[project]
name = "vitals"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "auburn", email = "37142182+auburnsummer@users.noreply.github.com" }
]
dependencies = [
    "msgspec>=0.18.6",
    "pillow>=10.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vitals"]

[project.scripts]
vitals = 'vitals:main'