[tool.poetry]
name = "rdlevel-parse"
version = "0.0.1"
description = "Parser for .rdlevel format"
authors = ["auburn <37142182+auburnsummer@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "./rdlevel_parse"}]

[tool.poetry.dependencies]
python = "~3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
