[tool.poetry]
name = "v1"
version = "0.1.0"
description = "Rhythm Cafe API v1"
authors = ["auburn <37142182+auburnsummer@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlmodel = "^0.0.8"
vitals = {path = "../../libs/vitals", develop = true}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
